# rust-bitcoincore-rpc

client/: Cargo.toml
json/: Cargo.toml
