[package]
name = "bitcoincore-rpc"
version = "0.8.0-rc1"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc" ]
readme = "README.md"

[lib]
name = "bitcoincore_rpc"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json = { path = "../json" }

log = "0.4.5"
num-bigint = { version = "0.2", features = [ "serde" ] }
serde = "1"
serde_json = "1"

[dependencies.jsonrpc]
git = "https://github.com/jb55/rust-jsonrpc"
rev = "5e4dd4817641aa2f5b9981b4ea7f3bca52e0b3d9"

# Used for deserialization of JSON.

# Used for Bitcoin-specific types.
